<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:background="@color/black"
        android:paddingTop="40sp"
        android:paddingBottom="40sp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textFontWeight="800"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/num1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/numP"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/num4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/numS"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numS"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/num7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num7"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num8"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num9"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/numX"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numX"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/numC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numC"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="700"
                android:textSize="20sp" />

            <Button
                android:id="@+id/num0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/num0"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/numE"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/numD"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/numD"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>